Port SIMD to 1.21.11