@@ -60,6 +60,7 @@ subprojects {
         options.encoding = Charsets.UTF_8.name()
         options.release = 21
         options.isFork = true
+        options.compilerArgs.add("--add-modules=jdk.incubator.vector")
     }
     tasks.withType<Javadoc>().configureEach  {
         options.encoding = Charsets.UTF_8.name()
